<resources>
    <string name="app_name">HuStory</string>
    <string name="todo">TODO</string>
    <string name="hint_question">Q</string>
    <string name="new_question_1">최근 </string>
    <string name="new_question_2">등록된 질문</string>
    <string name="view_all"><![CDATA[전체보기 >]]></string>
    <string name="new_question">Q</string>
    <string name="new_answer">A</string>
    <string name="consulting_status">상담 예약 현황</string>
    <string name="see_more"><![CDATA[자세히 >]]></string>
    <string name="professor">교수님</string>
    <string name="test_question"><![CDATA[" 프로젝트 평가 요소가 궁금합니다. "]]></string>
    <string name="test_answer">가장 중요한 것은 협업 능력!</string>
    <string name="answer_time">5초 전</string>
    <string name="go_answer">답변하기</string>
    <string name="test_count">0</string>
    <string name="test_name">홍길동</string>
    <string name="test_summary">회사에 임하는 자세</string>
    <string name="dday_reservation">D-1</string>
    <string name="go"><![CDATA[>]]></string>
    <string name="no_reservation">진행중인 예약 내역이 없습니다.</string>
    <string name="advice_reservation">새로운 예약을 진행하세요.</string>
    <string name="advice_reservation_professor">새로운 예약을 기다리세요.</string>
    <string name="go_reservation">예약 진행하기</string>
    <string name="reservation_date">상담 날짜</string>
    <string name="test_date">날짜 설정</string>
    <string name="reservation_way">상담 방법</string>
    <string name="test_way">온라인</string>
    <string name="test_place">ZOOM</string>
    <string name="reservation_place">상담 장소</string>
    <string name="test_state">수락 대기</string>
    <string name="reservation">예약</string>
    <string name="test_time">시간 설정</string>
    <string name="reservation_time">상담 시간</string>
    <string name="reservation_content">상담 내용</string>
    <string name="test_version">대구 ICT산업 혁신아카데미 2021년도 3기</string>
    <string name="my_school">최종 학교</string>
    <string name="test_school">길동대학교</string>
    <string name="my_major">전공명</string>
    <string name="test_major">컴퓨터공학과</string>
    <string name="my_company">희망기업</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="test_company_1">길동데이타</string>
    <string name="test_company_2">길동텍</string>
    <string name="test_company_3">길동시스템</string>
    <string name="card">관리카드</string>
    <string name="letter">자기소개서</string>
    <string name="info">내정보</string>
    <string name="test_birth">1998-06-15</string>
    <string name="test_email">hustar0@hustar.com</string>
    <string name="education">학력</string>
    <string name="certificate">자격증</string>
    <string name="experience">프로젝트 경험</string>
    <string name="career">경력사항</string>
    <string name="background">성장배경</string>
    <string name="character">성격의 장/단점</string>
    <string name="ict_experience">ICT 전문기술능력을 활용한 프로젝트 진행 경험 및 경력</string>
    <string name="motivation">ICT 기업 지원 동기 및 입사 포부</string>
    <string name="save">저장</string>
    <string name="ok">확인</string>
    <string name="question">질문</string>
    <string name="sort_new">최신순</string>
    <string name="sort_inquiry">조회순</string>
    <string name="my_question">내질문</string>
    <string name="logout">로그아웃</string>
    <string name="drop">탈퇴하기</string>
    <string name="enter">등록하기</string>
    <string name="question_title">제목</string>
    <string name="question_content">무엇이 궁금한가요?</string>
    <string name="name">이름</string>
    <string name="version">기수</string>
    <string name="birth">생년월일</string>
    <string name="email">이메일</string>
    <string name="answer_content">답변을 작성해주세요.</string>
    <string name="id">아이디 또는 이메일</string>
    <string name="pw">비밀번호</string>
    <string name="pw_check">비밀번호 확인</string>
    <string name="login">로그인</string>
    <string name="signup">회원가입</string>
    <string name="Auto">AUTO LOGIN</string>
    <string name="find_id">아이디 찾기</string>
    <string name="find_pw">비밀번호 찾기</string>
    <string name="student">학생</string>
    <string name="mentor">멘토</string>
    <string name="agency">소속기관</string>
    <string name="department">소속부서</string>
    <string name="spot">담당직위</string>
    <string name="test_agency">첨단정보통신융합산업기술원</string>
    <string name="test_department">3D융합기술지원센터</string>
    <string name="test_spot">센터장/산학협력중점교수</string>
    <string name="previous">이전 상담 내역</string>
    <string name="accept">수락</string>
    <string name="mentor_student">멘토 관리</string>

    <string name="test_scroll">ICT 전문기술능력을 활용한 프로젝트 진행 경험 및 경력 ICT 전문기술능력을 활용한 프로젝트 진행 경험 및 경력 ICT 전문기술능력을 활용한 프로젝트 진행 경험 및 경력
        ICT 전문기술능력을 활용한 프로젝트 진행 경험 및 경력 ICT 전문기술능력을 활용한 프로젝트 진행 경험 및 경력 ICT 전문기술능력을 활용한 프로젝트 진행 경험 및 경력
        ICT 전문기술능력을 활용한 프로젝트 진행 경험 및 경력 ICT 전문기술능력을 활용한 프로젝트 진행 경험 및 경력 ICT 전문기술능력을 활용한 프로젝트 진행 경험 및 경력
        ICT 전문기술능력을 활용한 프로젝트 진행 경험 및 경력 ICT 전문기술능력을 활용한 프로젝트 진행 경험 및 경력 ICT 전문기술능력을 활용한 프로젝트 진행 경험 및 경력
        ICT 전문기술능력을 활용한 프로젝트 진행 경험 및 경력 ICT 전문기술능력을 활용한 프로젝트 진행 경험 및 경력 ICT 전문기술능력을 활용한 프로젝트 진행 경험 및 경력
        ICT 전문기술능력을 활용한 프로젝트 진행 경험 및 경력 ICT 전문기술능력을 활용한 프로젝트 진행 경험 및 경력</string>
    <string name="test">\" 프로젝트 평가 요소가 궁금합니다. \"</string>
    <string name="enter_phone">전화번호를 입력하세요. ( \'-\' 제외)</string>
    <string name="q_count">조회수</string>


    <string-array name="day_of_week">
        <item>일</item>
        <item>월</item>
        <item>화</item>
        <item>수</item>
        <item>목</item>
        <item>금</item>
        <item>토</item>
    </string-array>

    <string-array name="on_off_line">
        <item>오프라인</item>
        <item>온라인</item>
    </string-array>
</resources>