<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@drawable/round_dialog"
    android:layout_margin="20dp"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:padding="15dp">

    <ImageView
        android:id="@+id/button_back"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_gravity="right"
        app:srcCompat="@drawable/cancel"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/icon_professor"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/student" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/name_student1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/jalnan"
                    android:text="@string/test_name"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/text_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jalnan"
                android:text="@string/test_summary"
                android:textColor="@color/main_color" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font"
                android:text="@string/reservation_date"
                android:textColor="@color/grey"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/reservation_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/font"
                android:gravity="center_horizontal"
                android:text="@string/test_date"
                android:textColor="@color/black" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/view_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font"
                android:text="@string/reservation_way"
                android:textColor="@color/grey"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/reservation_way"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/font"
                android:gravity="center_horizontal"
                android:text="@string/test_way"
                android:textColor="@color/black" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/view_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font"
                android:text="@string/reservation_place"
                android:textColor="@color/grey"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/reservation_place"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/font"
                android:gravity="center_horizontal"
                android:text="@string/test_place"
                android:textColor="@color/black" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/reservation_time"
            android:textSize="10sp"
            android:textColor="@color/grey"
            android:fontFamily="@font/jalnan" />

            <TextView
                android:id="@+id/reservation_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/jalnan"
                android:text="@string/test_time"
                android:textColor="@color/black"
                android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/reservation_content"
            android:textSize="10sp"
            android:textColor="@color/grey"
            android:fontFamily="@font/jalnan" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jalnan"
                android:text="@string/test_scroll"
                android:textColor="@color/black"
                android:textSize="12sp" />

        </ScrollView>

    </LinearLayout>

    <Button
        android:id="@+id/button_accept"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="15dp"

        android:background="@drawable/round2_background"
        android:elevation="7dp"
        android:fontFamily="@font/jalnan"
        android:padding="5dp"
        android:text="@string/accept"

        android:textColor="@color/white"
        android:textSize="16dp" />

</LinearLayout>