<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/logo_main"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_margin="30dp"

        android:contentDescription="@string/todo"
        android:scaleType="fitCenter"
        android:src="@drawable/logo_main" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/jalnan"
        android:gravity="center_horizontal"
        android:text="@string/mentor_student"
        android:textSize="16dp"
        android:padding="15dp"
        android:background="@color/main_color"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:elevation="5dp"
        android:background="@drawable/round3_background">

        <ListView
            android:id="@+id/list_mentor"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="20dp"
            android:dividerHeight="0px"
            android:divider="#FFFFFF"
            android:background="@color/white"
            android:choiceMode="multipleChoice"/>

        <Button
            android:id="@+id/button_modify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"

            android:text="@string/ok"
            android:textSize="16dp"
            android:textColor="@color/white"
            android:fontFamily="@font/jalnan"
            android:padding="5dp"

            android:elevation="5dp"
            android:background="@drawable/round2_background" />

    </LinearLayout>


</LinearLayout>